unpackaged/main/default/objects/Questionnaire_Update__e/Questionnaire_Update__e.object-meta.xml
<CustomObject>
    <description>Events after updates made within a Questionnaire at any level</description>
    <label>Questionnaire Update</label>
    <pluralLabel>Questionnaire Updates</pluralLabel>
</CustomObject>