unpackaged/main/default/objects/Questionnaire_Update__e/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>