unpackaged/main/default/objects/Questionnaire_Update__e/fields/Intake_Id__c.field-meta.xml
<CustomField>
    <fullName>Intake_Id__c</fullName>
    <description>Related intake</description>
    <label>Intake Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>