unpackaged/main/default/objects/Questionnaire_Update__e/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <description>Current intake status</description>
    <label>Intake Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>