unpackaged/main/default/objects/Questionnaire_Update__e/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>