unpackaged/main/default/objects/Questionnaire_Update__e/fields/Questionnaire_Id__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Id__c</fullName>
    <description>Original Questionnaire Id</description>
    <label>Questionnaire Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>